--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 
 project(SGUI)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -O1 -DNDEBUG -W -Wall -Wextra -Wno-unused-parameter -Wno-unused-private-field")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O1 -W -Wall -Wextra -Wno-unused-parameter -Wno-unused-private-field")
 set(CMAKE_EXE_LINKER_FLAGS "-lm -lSDL2")
 
 add_executable(SGUI)
@@ -18,10 +18,12 @@ target_sources(SGUI
 
 target_link_libraries(SGUI
     PUBLIC
-        SGUI_CORE
+        SGUI_EVENT_SYSTEM
+        SGUI_MATH
         SGUI_PLATFORM
         ${SDL2_LIBRARIES}
     )
 
-add_subdirectory(src/Core)
+add_subdirectory(src/EventSystem)
+add_subdirectory(src/Math)
 add_subdirectory(src/Platform)
