--- a/src/Platform/CMakeLists.txt
+++ b/src/Platform/CMakeLists.txt
@@ -1,37 +1,36 @@
 add_library(SGUI_PLATFORM)
 
-set(INCROOT ${SGUI_SOURCE_DIR}/include/Platform)
+find_package(SFML COMPONENTS graphics REQUIRED)
 
-find_package(SDL2 REQUIRED)
+set(INCROOT ${SGUI_SOURCE_DIR}/include/Platform)
 
 target_include_directories(SGUI_PLATFORM
     PUBLIC
-        ${INCROOT}/Input
-        ${INCROOT}/Render
-        ${SDL2_INCLUDE_DIRS}
+        ${INCROOT}
     )
 
 target_sources(SGUI_PLATFORM
     PUBLIC
-        ${INCROOT}/Input/Input.hpp
-        ${INCROOT}/Input/KeyboardEvent.hpp
-        ${INCROOT}/Input/MouseEvent.hpp
-        ${INCROOT}/Input/QuitEvent.hpp
-        ${INCROOT}/Render/Renderer.hpp
-        ${INCROOT}/Render/Texture.hpp
-        ${INCROOT}/Render/Window.hpp
+        ${INCROOT}/Color.hpp
+        ${INCROOT}/Font.hpp
+        ${INCROOT}/Input.hpp
+        ${INCROOT}/Renderer.hpp
+        ${INCROOT}/Sprite.hpp
+        ${INCROOT}/Text.hpp
+        ${INCROOT}/Window.hpp
     PRIVATE
-        Input/Input.cpp
-        Input/KeyboardEvent.cpp
-        Input/MouseEvent.cpp
-        Input/QuitEvent.cpp
-        Render/Renderer.cpp
-        Render/Texture.cpp
-        Render/Window.cpp
+        Font.cpp
+        Input.cpp
+        Renderer.cpp
+        Sprite.cpp
+        Text.cpp
+        Window.cpp
     )
 
 target_link_libraries(SGUI_PLATFORM
     PUBLIC
-        SGUI_MATH
-        SGUI_EVENT_SYSTEM
+        SGUI_CORE_EVENT_SYSTEM
+        SGUI_CORE_MATH
+        SGUI_GUI_EVENT
+        sfml-graphics
     )
