--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -1,2 +1,9 @@
+add_library(SGUI_CORE)
+
 add_subdirectory(EventSystem)
 add_subdirectory(Math)
+
+target_link_libraries(SGUI_CORE
+    PRIVATE
+        m
+    )
