--- a/src/Core/Math/CMakeLists.txt
+++ b/src/Core/Math/CMakeLists.txt
@@ -1,22 +1,41 @@
-add_library(SGUI_CORE_MATH)
-
 set(INCROOT ${SGUI_SOURCE_DIR}/include/Core/Math)
+set(SRCROOT ${SGUI_SOURCE_DIR}/src/Core/Math)
 
-target_include_directories(SGUI_CORE_MATH
+target_include_directories(SGUI_CORE
     PUBLIC
         ${INCROOT}
     )
 
-target_sources(SGUI_CORE_MATH
+target_sources(SGUI_CORE
     PUBLIC
         ${INCROOT}/Vector2.hpp
         ${INCROOT}/Vector3.hpp
     PRIVATE
-        Vector2.cpp
-        Vector3.cpp
+        ${SRCROOT}/Vector2.cpp
+        ${SRCROOT}/Vector3.cpp
     )
 
-target_link_libraries(SGUI_CORE_MATH
-    PRIVATE
-        m
-    )
+
+
+# add_library(SGUI_CORE_MATH)
+
+# set(INCROOT ${SGUI_SOURCE_DIR}/include/Core/Math)
+
+# target_include_directories(SGUI_CORE_MATH
+#     PUBLIC
+#         ${INCROOT}
+#     )
+
+# target_sources(SGUI_CORE_MATH
+#     PUBLIC
+#         ${INCROOT}/Vector2.hpp
+#         ${INCROOT}/Vector3.hpp
+#     PRIVATE
+#         Vector2.cpp
+#         Vector3.cpp
+#     )
+
+# target_link_libraries(SGUI_CORE_MATH
+#     PRIVATE
+#         m
+#     )
