--- a/src/GUI/Event/CMakeLists.txt
+++ b/src/GUI/Event/CMakeLists.txt
@@ -1,24 +1,17 @@
-add_library(SGUI_GUI_EVENT)
-
 set(INCROOT ${SGUI_SOURCE_DIR}/include/GUI/Event)
+set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Event)
 
-target_include_directories(SGUI_GUI_EVENT
+target_include_directories(SGUI_GUI
     PUBLIC
         ${INCROOT}
     )
 
-target_sources(SGUI_GUI_EVENT
+target_sources(SGUI_GUI
     PUBLIC
         ${INCROOT}/InputEventMask.hpp
         ${INCROOT}/KeyEvent.hpp
         ${INCROOT}/MouseEvent.hpp
     PRIVATE
-        KeyEvent.cpp
-        MouseEvent.cpp
-    )
-
-target_link_libraries(SGUI_GUI_EVENT
-    PUBLIC
-        SGUI_CORE_EVENT_SYSTEM
-        SGUI_CORE_MATH
+        ${SRCROOT}/KeyEvent.cpp
+        ${SRCROOT}/MouseEvent.cpp
     )
