--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,10 +1,6 @@
 add_library(SGUI_GUI)
 
-
-
-
-
-
+add_subdirectory(Commands)
 add_subdirectory(Event)
 add_subdirectory(Handler)
 add_subdirectory(Widgets)
