--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_library(SGUI_GUI)
 
-add_subdirectory(Commands)
+target_include_directories(SGUI_GUI
+    PUBLIC
+        ${SGUI_SOURCE_DIR}/include
+    )
+
 add_subdirectory(Event)
-add_subdirectory(Handler)
 add_subdirectory(Widgets)
 
 target_link_libraries(SGUI_GUI
-    PUBLIC
+    PRIVATE
         SGUI_CORE
         SGUI_PLATFORM
     )
