--- a/src/GUI/Event/CMakeLists.txt
+++ b/src/GUI/Event/CMakeLists.txt
@@ -1,17 +1,9 @@
 set(INCROOT ${SGUI_SOURCE_DIR}/include/GUI/Event)
 set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Event)
 
-target_include_directories(SGUI_GUI
-    PUBLIC
-        ${INCROOT}
-    )
-
 target_sources(SGUI_GUI
     PUBLIC
-        ${INCROOT}/InputEventMask.hpp
-        ${INCROOT}/KeyEvent.hpp
-        ${INCROOT}/MouseEvent.hpp
+        ${INCROOT}/InputEvent.hpp
     PRIVATE
-        ${SRCROOT}/KeyEvent.cpp
-        ${SRCROOT}/MouseEvent.cpp
+        ${SRCROOT}/InputEvent.cpp
     )
