--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -1,24 +1,13 @@
 set(INCROOT ${SGUI_SOURCE_DIR}/include/GUI/Widgets)
 set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Widgets)
 
-target_include_directories(SGUI_GUI
-    PUBLIC
-        ${INCROOT}
-    )
-
 target_sources(SGUI_GUI
     PUBLIC
-        ${INCROOT}/Button.hpp
-        ${INCROOT}/ImageWidget.hpp
-        ${INCROOT}/RectWidget.hpp
-        ${INCROOT}/TextWidget.hpp
-        ${INCROOT}/Title.hpp
+        ${INCROOT}/ImageVeiw.hpp
+        ${INCROOT}/TextVeiw.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
-        ${SRCROOT}/Button.cpp
-        ${SRCROOT}/ImageWidget.cpp
-        ${SRCROOT}/RectWidget.cpp
-        ${SRCROOT}/TextWidget.cpp
-        ${SRCROOT}/Title.cpp
+        ${SRCROOT}/ImageVeiw.cpp
+        ${SRCROOT}/TextVeiw.cpp
         ${SRCROOT}/Widget.cpp
     )
