added resource manager

--- a/src/Core/CMakeLists.txt
+++ b/src/Core/CMakeLists.txt
@@ -9,8 +9,11 @@ add_subdirectory(Application)
 add_subdirectory(EventManager)
 add_subdirectory(Math)
 add_subdirectory(LogManager)
+add_subdirectory(ResourceManager)
 
 target_link_libraries(SGUI_CORE
+    PUBLIC
+        SGUI_PLATFORM
     PRIVATE
         m
     )
