--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -3,11 +3,11 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Widgets)
 
 target_sources(SGUI_GUI
     PUBLIC
-        ${INCROOT}/ImageVeiw.hpp
-        ${INCROOT}/TextVeiw.hpp
+        ${INCROOT}/ImageWidget.hpp
+        ${INCROOT}/TextWidget.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
-        ${SRCROOT}/ImageVeiw.cpp
-        ${SRCROOT}/TextVeiw.cpp
+        ${SRCROOT}/ImageWidget.cpp
+        ${SRCROOT}/TextWidget.cpp
         ${SRCROOT}/Widget.cpp
     )
