added signal & slot; refactored widget classes

--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -3,11 +3,12 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Widgets)
 
 target_sources(SGUI_GUI
     PUBLIC
-        ${INCROOT}/Button.hpp
+        ${INCROOT}/ButtonBase.hpp
         ${INCROOT}/Label.hpp
         ${INCROOT}/Image.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
+        ${SRCROOT}/ButtonBase.cpp
         ${SRCROOT}/Label.cpp
         ${SRCROOT}/Image.cpp
         ${SRCROOT}/Widget.cpp
