refactor; added list widget;

--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -7,13 +7,16 @@ target_sources(SGUI_GUI
         ${INCROOT}/CompositeWidget.hpp
         ${INCROOT}/Icon.hpp
         ${INCROOT}/Label.hpp
+        ${INCROOT}/List.hpp
         ${INCROOT}/Slider.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
         ${SRCROOT}/ButtonBase.cpp
         ${SRCROOT}/CompositeWidget.cpp
         ${SRCROOT}/Icon.cpp
+
         ${SRCROOT}/Label.cpp
+        ${SRCROOT}/List.cpp
         ${SRCROOT}/Slider.cpp
         ${SRCROOT}/Widget.cpp
     )
