refactor signal; refactor event system; refactor widgets

--- a/src/Core/EventManager/CMakeLists.txt
+++ b/src/Core/EventManager/CMakeLists.txt
@@ -3,8 +3,10 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/Core/EventManager)
 
 target_sources(SGUI_CORE
     PUBLIC
-        ${INCROOT}/EventManager.hpp
         ${INCROOT}/Event.hpp
+        ${INCROOT}/EventDispatcher.hpp
+        ${INCROOT}/EventHandler.hpp
+        ${INCROOT}/EventManager.hpp
         ${INCROOT}/IEventListener.hpp
     PRIVATE
         ${SRCROOT}/EventManager.cpp
