--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -3,20 +3,19 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Widgets)
 
 target_sources(SGUI_GUI
     PUBLIC
-        ${INCROOT}/ButtonBase.hpp
+        ${INCROOT}/Button.hpp
         ${INCROOT}/CompositeWidget.hpp
         ${INCROOT}/Icon.hpp
         ${INCROOT}/Label.hpp
         ${INCROOT}/List.hpp
-        ${INCROOT}/Slider.hpp
+        # ${INCROOT}/Slider.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
-        ${SRCROOT}/ButtonBase.cpp
+        ${SRCROOT}/Button.cpp
         ${SRCROOT}/CompositeWidget.cpp
         ${SRCROOT}/Icon.cpp
-
         ${SRCROOT}/Label.cpp
         ${SRCROOT}/List.cpp
-        ${SRCROOT}/Slider.cpp
+        # ${SRCROOT}/Slider.cpp
         ${SRCROOT}/Widget.cpp
     )
