--- a/src/GUI/Events/CMakeLists.txt
+++ b/src/GUI/Events/CMakeLists.txt
@@ -1,5 +1,5 @@
-set(INCROOT ${SGUI_SOURCE_DIR}/include/GUI/Event)
-set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Event)
+set(INCROOT ${SGUI_SOURCE_DIR}/include/GUI/Events)
+set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Events)
 
 target_sources(SGUI_GUI
     PUBLIC
