--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -4,20 +4,18 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/GUI/Widgets)
 target_sources(SGUI_GUI
     PUBLIC
         ${INCROOT}/Button.hpp
-        ${INCROOT}/CompositeWidget.hpp
+        ${INCROOT}/ContainerWidget.hpp
         ${INCROOT}/Icon.hpp
         ${INCROOT}/Label.hpp
         ${INCROOT}/List.hpp
-        # ${INCROOT}/Slider.hpp
         ${INCROOT}/TitleBar.hpp
         ${INCROOT}/Widget.hpp
     PRIVATE
         ${SRCROOT}/Button.cpp
-        ${SRCROOT}/CompositeWidget.cpp
+        ${SRCROOT}/ContainerWidget.cpp
         ${SRCROOT}/Icon.cpp
         ${SRCROOT}/Label.cpp
         ${SRCROOT}/List.cpp
-        # ${SRCROOT}/Slider.cpp
         ${SRCROOT}/TitleBar.cpp
         ${SRCROOT}/Widget.cpp
     )
