added menu; menu bar; slider and its styles; scrolling list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.7)
 
 project(SGUI)
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -O1 -Wall -Wextra")
+set(CMAKE_CXX_FLAGS "-std=c++11 -O1 -Wall -Wextra -Wno-unused-parameter")
 
 add_executable(paint)
 
