--- a/src/Core/Math/CMakeLists.txt
+++ b/src/Core/Math/CMakeLists.txt
@@ -3,9 +3,11 @@ set(SRCROOT ${SGUI_SOURCE_DIR}/src/Core/Math)
 
 target_sources(SGUI_CORE
     PUBLIC
+        ${INCROOT}/Rect2.hpp
         ${INCROOT}/Vector2.hpp
         ${INCROOT}/Vector3.hpp
     PRIVATE
+        ${SRCROOT}/Rect2.cpp
         ${SRCROOT}/Vector2.cpp
         ${SRCROOT}/Vector3.cpp
     )
