--- a/src/GUI/Widgets/CMakeLists.txt
+++ b/src/GUI/Widgets/CMakeLists.txt
@@ -8,14 +8,22 @@ target_sources(SGUI_GUI
         ${INCROOT}/Icon.hpp
         ${INCROOT}/Label.hpp
         ${INCROOT}/List.hpp
+        ${INCROOT}/MenuBar.hpp
+        ${INCROOT}/ScrollBar.hpp
+        ${INCROOT}/Slider.hpp
         ${INCROOT}/TitleBar.hpp
         ${INCROOT}/Widget.hpp
+        ${INCROOT}/Window.hpp
     PRIVATE
         ${SRCROOT}/Button.cpp
         ${SRCROOT}/ContainerWidget.cpp
         ${SRCROOT}/Icon.cpp
         ${SRCROOT}/Label.cpp
         ${SRCROOT}/List.cpp
+        ${SRCROOT}/MenuBar.cpp
+        ${SRCROOT}/ScrollBar.cpp
+        ${SRCROOT}/Slider.cpp
         ${SRCROOT}/TitleBar.cpp
         ${SRCROOT}/Widget.cpp
+        ${SRCROOT}/Window.cpp
     )
