added mouse enter, mouse leave events; write code for example application

--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -15,8 +15,10 @@ target_sources(SGUI_APPLICATION
         ${SRCROOT}/Application.cpp
 )
 
+add_subdirectory(Commands)
+add_subdirectory(Events)
+add_subdirectory(Panels)
 add_subdirectory(Tools)
-add_subdirectory(UI)
 
 target_link_libraries(SGUI_APPLICATION
     PUBLIC
